--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,9 +11,9 @@ permissions:
   checks: write
 on: # evenement a déclancher
   push: #a chaque fois que tu vas faire un push
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  
 
 jobs:
   build:
@@ -28,9 +28,14 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name : Build with Maven
+      run : mvn -B package --file pom.xml
+    - name : Upload target foder report
+      uses : action/upload-artifact@v2
+      with : 
+        name : rapport de tests
+          path :${{ github.workspace }}/target/reports
+      
+         
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+   
