--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,11 +30,13 @@ jobs:
         cache: maven
     - name : Build with Maven
       run : mvn -B package --file pom.xml
-    - name : Upload target foder report
+    - name : Upload target folder report
       uses : action/upload-artifact@v2
       with : 
         name : rapport de tests
-          path :${{ github.workspace }}/target/reports
+          path :
+            ${{ github.workspace }}/target
+            ${{ github.workspace }}/target/reports
       
          
 
