--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,9 +34,8 @@ jobs:
       uses : action/upload-artifact@v2
       with : 
         name : rapport de tests
-          path :
-            ${{ github.workspace }}/target
-            ${{ github.workspace }}/target/reports
+          path :${{ github.workspace }}/target
+           
       
          
 
