--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
     - name : Build with Maven
       run : mvn -B package --file pom.xml
     - name : Upload target folder report
-      uses : action/upload-artifact@v3
+      uses : actions/upload-artifact@v2
       with : 
         name : rapport de tests
         path : ${{ github.workspace }}/target
