--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,33 +6,42 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 name: Java CI with Maven
-on: # evenement a déclancher
-  push: #a chaque fois que tu vas faire un push
+
+on: # events que vous allez déclencher 
+  push: # a chaque fois que tu vas faire un push
     branches:
-      - main 
+       - main
 permissions:
-  contents: read
-  checks: write
+  contents: read  # permet de lire le dépot
+  checks: write # permet d'écrire 
+  
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v3 # utilise l'action checkout pour récupérer le code source de GitHub (prépare le terrain)
+    - name: Set up JDK 21  # juste le nom de l'étape
+      uses: actions/setup-java@v3 # set up le jdk
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name : Build with Maven
-      run : mvn -B package --file pom.xml
-    - name : Upload target folder report
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Upload target folder report
       uses : actions/upload-artifact@v2
-      with : 
-        name : rapport de tests
-        path : ${{ github.workspace }}/target
-           
+      with: 
+       name: rapport de tests
+       path : ${{ github.workspace }}/target
+        #  ${{ github.workspace }}/reports
+
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()    # run this step even if previous step failed
+      with:
+          name: JEST Tests            # Name of the check run which will be created
+          path: ${{ github.workspace }}/target/surefire-reports/TEST-TestSuite.xml    # Path to test results
+          reporter: java-junit        # Format of test results   
       
-         
 
    
